tests/interpreter_tests/defaultValue2.test
################################################################################
#    Copyright (c) 2012-2014, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=defaultValue2
INTERPRETER_TESTS_DIR=${JS_HOME}/tests/interpreter_tests
interpret
interpret_out_WCIequals=\
Throw(TypeError) @ ${JS_HOME}/tests/interpreter_tests/defaultValue2.js:2:1-15\n
interpret_err_equals=
