tests/interpreter_tests/defaultValue2.js
a = { toString: function() { return {} },  substring: String.prototype.substring }
a.substring(0)
